# http-lib

./: .clangd  .gitignore  CMakeLists.txt  build.sh  index.html
include/: client.h  common.h  communication.h  conn.h  date-helper.h  debug.h  err.h  http-err.h  request.h  string-helper.h
src/: client.c  communication.c  conn.c  date-helper.c  request.c  string-helper.c
test/: main.c
